Added initial authentication check. Added create and save functionality to shows. Added search functionatlity to shows.

--- a/OAProjects.API/OAProjects.Models/OAProjects.Models.csproj
+++ b/OAProjects.API/OAProjects.Models/OAProjects.Models.csproj
@@ -10,4 +10,8 @@
     <Folder Include="FinanceTracker\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
+  </ItemGroup>
+
 </Project>
