--- a/OAProjects.API/OAProjects.API/OAProjects.API.csproj
+++ b/OAProjects.API/OAProjects.API/OAProjects.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.22" />
@@ -20,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OAProjects.Data\OAProjects.Data.csproj" />
+    <ProjectReference Include="..\OAProjects.Store\OAProjects.Store.csproj" />
   </ItemGroup>
 
 </Project>
