--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -3,11 +3,17 @@
     "ShowLoggerConnection": "Server=(localdb)\\mssqllocaldb;Database=showloggerdb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
     "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true"
   },
+  "ListeningPort": "https://localhost:7140",
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "2e2f4c33-7455-4484-9731-dc3058288375",
     "ClientId": "89f937e2-f440-4ae3-86dc-b0ec5ba9a11c",
-    "Scopes": "User.ReadWrite"
+    "Scopes": {
+      "User.ReadWrite": [ "User.ReadWrite" ]
+    },
+    "AppPermissions": {
+      "User.ReadWrite": [ "User.ReadWrite.All" ]
+    }
   },
   "Logging": {
     "LogLevel": {
