Start of auth0 change

--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -4,6 +4,10 @@
     "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true"
   },
   "ListeningPort": "https://localhost:7140",
+  "Auth0": {
+    "Domain": "dev-3126h7e6syg2548p.us.auth0.com",
+    "Audience": " https://oaprojects-api.oaprojects.net"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "2e2f4c33-7455-4484-9731-dc3058288375",
