--- a/OAProjects.API/OAProjects.Models/OAProjects.Models.csproj
+++ b/OAProjects.API/OAProjects.Models/OAProjects.Models.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.7.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
