Started Info section
Added Load and SearchAPI.
Updated some namespaces.

--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -8,16 +8,9 @@
     "Domain": "dev-3126h7e6syg2548p.us.auth0.com",
     "Audience": "https://oaprojects-api.oaprojects.net"
   },
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "2e2f4c33-7455-4484-9731-dc3058288375",
-    "ClientId": "89f937e2-f440-4ae3-86dc-b0ec5ba9a11c",
-    "Scopes": {
-      "User.ReadWrite": [ "User.ReadWrite" ]
-    },
-    "AppPermissions": {
-      "User.ReadWrite": [ "User.ReadWrite.All" ]
-    }
+  "Apis": {
+    "TMDbURL": "https://www.themoviedb.org/",
+    "TMDbAPIKey": ""
   },
   "Logging": {
     "LogLevel": {
