--- a/OAProjects.API/OAProjects.Store/OAProjects.Store.csproj
+++ b/OAProjects.API/OAProjects.Store/OAProjects.Store.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
+    <PackageReference Include="TMDbLib" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
