--- a/OAProjects.API/OAProjects.Import/appsettings.json
+++ b/OAProjects.API/OAProjects.Import/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     "ShowLoggerConnection": "Server=(localdb)\\mssqllocaldb;Database=showloggerdb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
-    "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true"
+    "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
+    //"ShowLoggerConnection": "Server=tcp:oaprojects.database.windows.net,1433;Initial Catalog=catanloggerdb;Persist Security Info=False;User ID=oaprojects_admin;Password=guxvy7-tInsix-huphyb;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"OAIdentityConnection": "Server=tcp:oaprojects.database.windows.net,1433;Initial Catalog=catanloggerdb;Persist Security Info=False;User ID=oaprojects_admin;Password=guxvy7-tInsix-huphyb;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Data": {
     "DataFolderPath": "C:\\Users\\ffale\\Desktop\\Projects\\GitHub\\oaprojects-api\\old_data"
