--- a/OAProjects.API/OAProjects.Import/appsettings.json
+++ b/OAProjects.API/OAProjects.Import/appsettings.json
@@ -1,10 +1,15 @@
 {
   "ConnectionStrings": {
     "ShowLoggerConnection": "Server=(localdb)\\mssqllocaldb;Database=showloggerdb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
-    "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
+    "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true"
   },
   "Data": {
-    "DataFolderPath": "C:\\Users\\ffale\\Desktop\\Projects\\GitHub\\oaprojects-api\\old_data"
+    "DataFolderPath": "C:\\Users\\ffale\\Desktop\\Projects\\GitHub\\oaprojects-api\\old_data",
+    "ShowLoggerDbName": "showloggerdb",
+    "OAIdentityDbName": "oaidentitydb"
+  },
+  "Apis": {
+    "TMDbAPIKey": ""
   },
   "Logging": {
     "LogLevel": {
