--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ FodyWeavers.xsd
 /OAProjects.API/OAProjects.API/appsettings.Local.json
 /old_data
 /old_server_data
+OAProjects.API/OAProjects.Import/appsettings.Local.json
