Fixed file ignore

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,5 @@ FodyWeavers.xsd
 OAProjects.API/OAProjects.Import/appsettings.Local.json
 OAProjects.API/OAProjects.Import/appsettings.Development.json
 OAProjects.API/OAProjects.Import/appsettings.Development.json
+OAProjects.API/OAProjects.Import/appsettings.Development.json
+/OAProjects.API/OAProjects.Import/appsettings.Development.json
