--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,4 @@ OAProjects.API/OAProjects.Import/appsettings.Development.json
 OAProjects.API/OAProjects.Import/appsettings.Development.json
 /OAProjects.API/OAProjects.Import/appsettings.Development.json
 OAProjects.API/OAProjects.Batch/appsettings.Local.json
+/batch-publish
