removed batch-publish folder

--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,4 @@ OAProjects.API/OAProjects.Import/appsettings.Development.json
 /OAProjects.API/OAProjects.Import/appsettings.Development.json
 OAProjects.API/OAProjects.Batch/appsettings.Local.json
 /batch-publish
+/batch-publish
