--- a/OAProjects.API/OAProjects.Batch/appsettings.json
+++ b/OAProjects.API/OAProjects.Batch/appsettings.json
@@ -11,7 +11,7 @@
   "LogFolderPath": "C:\\Users\\ffale\\Desktop\\Projects\\GitHub\\oaprojects-api\\OAProjects.API\\OAProjects.Batch\\logs",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Warning",``
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
