--- a/OAProjects.API/OAProjects.Import/appsettings.json
+++ b/OAProjects.API/OAProjects.Import/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "ShowLoggerConnection": "Server=(localdb)\\mssqllocaldb;Database=showloggerdb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
-    "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true"
+    "ShowLoggerConnection": "server=localhost;Database=showloggerdb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true",
+    "OAIdentityConnection": "server=localhost;Database=oaidentitydb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true"
   },
   "Data": {
     "DataFolderPath": "C:\\Users\\ffale\\Desktop\\Projects\\GitHub\\oaprojects-api\\old_data",
-    "ShowLoggerDbName": "showloggerdb",
-    "OAIdentityDbName": "oaidentitydb"
+    "ShowLoggerDbName": "showloggerdb_v2",
+    "OAIdentityDbName": "oaidentitydb_v2"
   },
   "Apis": {
     "TMDbAPIKey": ""
