--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ShowLoggerConnection": "Server=(localdb)\\mssqllocaldb;Database=showloggerdb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true",
-    "OAIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=oaidentitydb; User Id=oaprojects_admin; Password=password;TrustServerCertificate=true"
+    "ShowLoggerConnection": "server=localhost;Database=showloggerdb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true",
+    "OAIdentityConnection": "server=localhost;Database=oaidentitydb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true"
   },
   "ListeningPort": "https://localhost:7140",
   "Auth0": {
