--- a/OAProjects.API/OAProjects.Data/OAProjects.Data.csproj
+++ b/OAProjects.API/OAProjects.Data/OAProjects.Data.csproj
@@ -7,16 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="OAIdentity\Migrations\" />
+    <Compile Remove="OAIdentity\OldMigrations\**" />
+    <Compile Remove="ShowLogger\OldMigrations\**" />
+    <EmbeddedResource Remove="OAIdentity\OldMigrations\**" />
+    <EmbeddedResource Remove="ShowLogger\OldMigrations\**" />
+    <None Remove="OAIdentity\OldMigrations\**" />
+    <None Remove="ShowLogger\OldMigrations\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.22" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.22">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.28" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.28">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.3" />
   </ItemGroup>
 
 </Project>
