first version deployed

--- a/OAProjects.API/OAProjects.Batch/appsettings.json
+++ b/OAProjects.API/OAProjects.Batch/appsettings.json
@@ -4,14 +4,14 @@
     "Auth0ClientId": "",
     "Auth0ClientSecret": "",
     "Auth0Audience": "",
-    "AUth0GrantType": "",
+    "Auth0GrantType": "",
     "Auth0Scopes": ""
   },
   "OAProjectsAPI": "https://localhost:7140/api/",
   "LogFolderPath": "C:\\Users\\ffale\\Desktop\\Projects\\GitHub\\oaprojects-api\\OAProjects.API\\OAProjects.Batch\\logs",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",``
+      "Default": "Warning",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
