--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -6,7 +6,13 @@
   "ListeningPort": "https://localhost:7140",
   "Auth0": {
     "Domain": "dev-3126h7e6syg2548p.us.auth0.com",
-    "Audience": "https://oaprojects-api.oaprojects.net"
+    "Audience": "https://oaprojects-api.oaprojects.net",
+    "Url": "https://dev-3126h7e6syg2548p.us.auth0.com",
+    "Auth0ClientId": "",
+    "Auth0ClientSecret": "",
+    "Auth0Audience": "",
+    "AUth0GrantType": "",
+    "Auth0Scopes": ""
   },
   "Apis": {
     "TMDbURL": "https://www.themoviedb.org/",
