Initial commit of Finance Tracker

--- a/OAProjects.API/OAProjects.Store/OAProjects.Store.csproj
+++ b/OAProjects.API/OAProjects.Store/OAProjects.Store.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\OAProjects.Models\OAProjects.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FinanceTracker\" />
+  </ItemGroup>
+
 </Project>
