--- a/.gitignore
+++ b/.gitignore
@@ -407,3 +407,4 @@ OAProjects.API/OAProjects.Import/appsettings.Development.json
 OAProjects.API/OAProjects.Batch/appsettings.Local.json
 /batch-publish
 /batch-publish
+/ft_server_data
