--- a/OAProjects.API/OAProjects.API/OAProjects.API.csproj
+++ b/OAProjects.API/OAProjects.API/OAProjects.API.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="Scalar.AspNetCore" Version="1.2.23" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
