--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,7 +38,7 @@ jobs:
         files: ./OAProjects.API/Release-API/appsettings.json
       env:
         ConnectionStrings.ShowLoggerConnection: ${{ secrets.SHOW_LOGGER_DB }}
-        ConnectionStrings.FinanceTrackerConnection: ${{ secrets.OA_IDENTITY_DB }}
+        ConnectionStrings.FinanceTrackerConnection: ${{ secrets.FINANCE_TRACKER_DB }}
         ConnectionStrings.OAIdentityConnection: ${{ secrets.OA_IDENTITY_DB }}
         ListeningPort: ${{ secrets.LISTENING_PORT }}
         Auth0.Domain: ${{ secrets.AUTH0_DOMAIN }}
