--- a/OAProjects.API/OAProjects.Data/OAProjects.Data.csproj
+++ b/OAProjects.API/OAProjects.Data/OAProjects.Data.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CatanLogger\Migrations\" />
     <Folder Include="FinanceTracker\Migrations\" />
   </ItemGroup>
 
