Added more catan logger logic

--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "ShowLoggerConnection": "server=localhost;Database=showloggerdb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true",
     "FinanceTrackerConnection": "server=localhost;Database=financetrackerdb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true",
+    "CatanLoggerConnection": "server=localhost;Database=catanloggerdb;user=oaprojects;password=password;TreatTinyAsBoolean=true",
     "OAIdentityConnection": "server=localhost;Database=oaidentitydb_v2;user=oaprojects;password=password;TreatTinyAsBoolean=true"
   },
   "ListeningPort": "https://localhost:7140",
