--- a/OAProjects.API/OAProjects.API/OAProjects.API.csproj
+++ b/OAProjects.API/OAProjects.API/OAProjects.API.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Scalar.AspNetCore" Version="1.2.23" />
+    <PackageReference Include="Serilog" Version="4.3.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
