--- a/OAProjects.API/OAProjects.API/appsettings.json
+++ b/OAProjects.API/OAProjects.API/appsettings.json
@@ -19,11 +19,18 @@
     "TMDbURL": "https://www.themoviedb.org/",
     "TMDbAPIKey": ""
   },
-  "Logging": {
-    "LogLevel": {
+  "LogBaseDirectory": "logs",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*"
 }
