Removed last name as required

--- a/OAProjects.API/OAProjects.Data/OAProjects.Data.csproj
+++ b/OAProjects.API/OAProjects.Data/OAProjects.Data.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="FinanceTracker\Migrations\" />
+    <Folder Include="OAIdentity\Migrations\" />
   </ItemGroup>
 
 </Project>
